# interview-question-creator-gen-ai

./: .env  .env.example  .gitignore  License  README.md  app.py  pyproject.toml  requirements.txt  setup.py
research/: hf-implementation.ipynb  nb.ipynb
src/: helper.py  prompt.py
static/output/: 20250217_18_52_28.csv  20250217_18_58_44.csv  20250217_19_08_47.csv  20250217_19_10_35.csv  20250217_19_13_20.csv  20250217_19_23_38.csv  20250217_19_35_13.csv  QA.csv
templates/: index.html
