[project]
name = "interview-question-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "sadhiin",email = "sadhin.aiub.cse@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.26.4)",
    "openai (>=1.63.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
